turtleart.lessons.turtleart.Main.Polygon7.scala.error
Source:6: error: too many arguments for method droite: (x$1: Double)Unit
droite(51,5:Double)
      ^